# magical-pdf

./: .gitignore  BUILD.md  CODEX_HANDOFF.md  IOS_SETUP.md  Magical PDF - Windows setup and Codex handoff.docx  README.md  START_HERE.md  WINDOWS_SETUP.md  api-config.js  app.js  capacitor.config.json  index.html  nav.js  package-lock.json  package.json  render.yaml  styles.css
.claude/: launch.json
.github/workflows/: build-installers.yml  deploy-pages.yml
codex-setup/: CODEX_REMOTE_INSTRUCTIONS.md  README.md
codex-setup/docs/: connectors-checklist.md
codex-setup/scripts/: setup-codex-connectors-macos.sh  setup-codex-connectors.ps1  (+2 more)
docs/: DEPLOY_EXTRACT.md  DOCRAFT_API_HOOK.md  DOCRAFT_INTEGRATION.md  EXPORT_MODES.md  EXTRACT_INTEGRATION.md  FEATURES_ROADMAP_V2.md  PDF_UTILITIES_ROADMAP.md  codex-connectors-setup.md  codex-mac-mini-m4-setup.html  cursor-development-guide.md  macos-workflow-guide.html  windows-pc-workflow-guide.html
extract/: .dockerignore  .gitignore  Dockerfile  README.md  add_pdf_text_layer.py  batch_convert.py  ci_check.py  ground_truth_slides.json  railway.toml  requirements.txt  run-api.ps1
public/: _headers
scripts/: add-test-image-to-pdf.mjs  create_codex_mac_m4_instruction.mjs  create_windows_instruction_doc.py  create_windows_instruction_pdf.py  dev-server.mjs  generate-api-config.mjs  generate-icon-concepts.mjs  generate-tauri-icon.mjs  prepare-dist.mjs  start-macos.command  start-windows.cmd  start-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/extract/: ui.css  (+2 more)
(+56 files in other folders)
